--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Hotels</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="departure">Вылет из</string>
     <string name="text_location">Страна , город</string>
     <string name="text_dates">Даты</string>
@@ -8,4 +7,8 @@
     <string name="text_hotel">Отель</string>
     <string name="text_room">Номер</string>
     <string name="text_nutrition">Питание</string>
+
+
+    <string name="text_reserv_part1">Подтверждение заказа №</string>
+    <string name="text_reserv_part2">может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
 </resources>
